feat: Sonar (#13)
* fix test